package casinoCommonProto;

message User {
    optional string mid = 1; //mongdo Mid
    optional string pwd = 2; //最后一次签到的时间
    optional int64 coin = 3; //用户的金币
    optional uint32 id = 4;
    optional string nickName = 5; //用户的昵称
    optional bool loginTurntable = 6; //今日转盘奖励是否领取
    optional string loginTurntableTime = 7; //今日领取时间
    optional int32 scores = 8; //积分
    optional string lastSignTime = 9; //最后一次签到的时间
    optional int32 signCount = 10; //连续签到的次数
    optional int64 Diamond = 11; //通过钻石开房间
    optional string openId = 12; //微信openId
    optional string headUrl = 13; //头像
    optional string city = 14; //
    optional int32 sex = 15;
}