syntax = "proto2";

import public "ddz_base.proto";
package ddzproto;
option optimize_for = LITE_RUNTIME;

//服务器信息
message ServerInfo {
    optional string ip = 1;
    optional int32 port = 2;
    optional int32 status = 3; //0开启 1关闭
}

// 接入服务器
message DdzQuickConn {
    optional ProtoHeader header = 1;
    optional string channelId = 2; //渠道号
    optional int32 gameId = 3; //游戏ID: 1德州、2麻将、3斗地主
    optional int32 currVersion = 4; //当前版本号
    optional int32 languageId = 5;
    optional uint32 userId = 6; //用户Id
}

message DdzAckQuickConn {
    optional ProtoHeader header = 1;
    optional ServerInfo gameServer = 2; //游戏服务器
    optional int32 releaseTag = 3; //发布版本标志
    optional int32 currVersion = 4; //服务器的当前最新版本号
    optional int32 isUpdate = 5; //0=无需升级 1=可选升级 2=强制升级
    optional string downloadUrl = 6; //下载地址
    optional string versionInfo = 7; //版本升级描述信息

    optional int32 isMaintain = 8; //是否停服维护 1=停服维护中
    optional string maintainMsg = 9; //维护提示消息
}

// 游戏登录请求
message DdzLogin {
    optional ProtoHeader header = 1;
    optional uint32 userId = 2; // 用户id
    optional int32 protoVersion = 3; // 客户端 proto version
    optional WeixinInfo wxInfo = 4; //微信登录信息
}

// 游戏登录回复
message DdzAckLogin {
    optional ProtoHeader header = 1;
    optional uint32 userId = 2; //用户id
    optional string nickName = 3; //昵称
    optional string roomPassword = 4; // 朋友桌房间密码
    optional int64 costCreateRoom = 5; // 建房消耗钻石数
    optional int64 costRebuy = 6; // Rebuy消耗钻石数(锦标赛)
    optional bool championship = 7; // 是否是锦标赛
    optional int64 chip = 8; // 用户钻石余额
    optional int32 mailCount = 9; // 用户邮件数量:>=0 (DdzAckNotice中type=3对应的信息)
    optional string notice = 10; // 滚动公告的内容
    optional int32 gameStatus = 11; // 0：未游戏  1：正在朋友桌  2：正在锦标赛
}

message DdzNotice {
    optional ProtoHeader header = 1;
    optional int32 noticeType = 2; //公告的类型
}

// 公告的内容
message DdzAckNotice {
    optional ProtoHeader header = 1;
    optional int32 noticeType = 2; //公告的类型:1,滚动信息,2,充值信息,3,公告信息
    optional string noticeTitle = 3; //公告的标题
    optional string noticeContent = 4; //公告的内容
    optional string noticeMemo = 5; //公告的备注
    optional int32 id = 6; //公告的id
    repeated string fileds = 7; //公告的字段,目前子还是给充值的协议使用
}

//游戏战绩
message DdzGameRecord {
    optional ProtoHeader header = 1;
    optional int32 id = 2; //战绩id
    optional uint32 userId = 3; //用户id
}
// 
message BeanUserRecord {
    optional ProtoHeader header = 1;
    optional uint32 UserId = 2; //用户id
    optional string NickName = 3; //用户昵称
    optional int64 WinAmount = 4; //用户输赢金额
}
// 
message BeanGameRecord {
    optional ProtoHeader header = 1;
    optional int32 id = 2; //战绩id
    optional int32 deskId = 3; //关联的桌子的Id
    optional string beginTime = 4; //游戏开始的时间
    repeated BeanUserRecord users = 5; //用户
}
//
message DdzAckGameRecord {
    optional ProtoHeader header = 1;
    optional uint32 userId = 2; //用户id
    repeated BeanGameRecord records = 3; //结果
}

// 反馈信息的协议
message DdzFeedback {
    optional ProtoHeader header = 1;
    optional string message = 2; //用户提交的反馈内容
}

// 创建房间
message DdzCreateRoom {
    optional ProtoHeader header = 1;
    optional RoomTypeInfo roomTypeInfo = 2; // 房间类型信息，包括：房间类型、局数、封顶、玩法、牌张、结算、底
}

// 创建房间回复的信息
message DdzAckCreateRoom {
    optional ProtoHeader header = 1;
    optional int32 deskId = 2; // 用户id
    optional string password = 3; // 房间密码
    optional int64 userBalance = 4; // 用户的余额
    optional int64 createFee = 5; // 创建房间的费用
    optional RoomTypeInfo roomTypeInfo = 6; // 房间类型信息，包括：房间类型、局数、封顶、玩法、牌张、结算、底
}

// 客户端请求进入 room, 服务器返回DdzSendGameInfo
message DdzEnterRoom {
    optional ProtoHeader header = 1;
    optional int32 matchId = 2;
    optional int32 tableId = 3;
    optional string PassWord = 4; // 房间密码
    optional uint32 userId = 5; // 请求的userId
}

message DdzAckEnterRoom {
    optional ProtoHeader header = 1;
}

